# archestra

./: EXTERNAL_CONTRIBUTORS.md
.github/release-please/: .release-please-manifest.json
.github/workflows/: build-base-mcp-sandbox-docker-image.yml  deploy-dev-platform-images.yml  docker-image-scanning.yml  release-please.yml
docs/pages/: platform-adding-knowledge-connectors.md  platform-archestra-mcp-server.md  platform-observability.md
platform/: CHANGELOG.md  package.json  pnpm-lock.yaml
platform/backend/: knip.config.ts  package.json
platform/backend/src/: config.test.ts  config.ts  server.ts  websocket.ts
platform/dev/: Tiltfile.database  Tiltfile.dev  prometheus.yml
platform/frontend/: package.json
platform/mcp_server_sandbox_docker_image/: .dockerignore  Dockerfile  Makefile  package.json  pyproject.toml
platform/mcp_server_sandbox_docker_image/in_pod_server/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
platform/mcp_server_sandbox_docker_image/in_pod_server/src/: activity.ts  auth.test.ts  auth.ts  logger.ts  path-guard.test.ts  path-guard.ts  server.ts  tmux-client.ts
platform/mcp_server_sandbox_docker_image/in_pod_server/src/tools/: file.test.ts  file.ts  pty.test.ts  pty.ts
platform/mcp_server_sandbox_docker_image/rootfs/etc/: tmux.conf
platform/shared/: access-control.ts  built-in-catalogs.ts  index.ts  knowledge-base.test.ts  knowledge-base.ts  mcp-sandbox.ts  mcp-server-config.test.ts  mcp-server-config.ts  package.json  playwright-browser.test.ts  playwright-browser.ts  routes.ts  websocket.ts
(+146 files in other folders)
